# Yelp-Recommendation-System

./: .gitignore  README.md  requirements.txt
app/: .gitignore
app/backend/: api.py  main.py  models.py  pipeline_c.py  pyproject.toml
app/frontend/: README.md  api_client.py  app.py  components.py  e2e_smoke.sh  figma_demo.html  pyproject.toml  styles.css
docs/: douyin_ecommerce_search_notes.md  figma_make_audit.md  figma_make_prompt.md  meeting_2026-05-01.md  model_candidates_overview.md  past_projects.md  phase_implementation_notes.md  proposals.md  recommender_training_explainer.md  training_pipeline_plan.md  user_requirements.md
models/: baseline_metrics.json  deepfm_ablate_no_user_id_history.json  deepfm_emb16_drop0.2_l21e-4_history.json  deepfm_emb32_drop0.1_l21e-03_v2_history.json  deepfm_emb32_drop0.1_l21e-04_v2_history.json  deepfm_emb32_drop0.1_l21e-05_v2_history.json  deepfm_emb32_drop0.1_l25e-04_v2_history.json  deepfm_emb32_drop0.2_l21e-03_v2_history.json  deepfm_emb32_drop0.2_l21e-04_v2_history.json  deepfm_emb32_drop0.2_l21e-05_v2_history.json  deepfm_emb32_drop0.2_l21e-4_history.json  deepfm_emb32_drop0.2_l25e-04_v2_history.json  deepfm_emb32_drop0.3_l21e-03_v2_history.json  deepfm_emb32_drop0.3_l21e-04_v2_history.json  deepfm_emb32_drop0.3_l21e-05_v2_history.json  deepfm_emb32_drop0.3_l25e-04_v2_history.json  deepfm_emb32_drop0.4_l21e-03_v2_history.json  deepfm_emb32_drop0.4_l21e-04_v2_history.json  deepfm_emb32_drop0.4_l21e-05_v2_history.json  deepfm_emb32_drop0.4_l25e-04_v2_history.json  deepfm_emb32_drop0.5_l21e-03_v2_history.json  deepfm_emb32_drop0.5_l21e-04_v2_history.json  fm_history.json  (+14 more)
(+36 files in other folders)
