[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taste-hunter-backend"
version = "0.1.0"
description = "FastAPI backend for Taste Hunter Phase 8 demo (Pipeline C: hard-filter + DeepFM v2)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "structlog>=24.1",
    "pandas>=2.2",
    "pyarrow>=15",
    "numpy>=1.26",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "mypy>=1.8",
]

[tool.setuptools]
py-modules = ["main", "api", "models", "pipeline_c"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
