[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taste-hunter-frontend"
version = "0.1.0"
description = "Streamlit frontend for Taste hunter Phase 8 demo (F1 Chat Home)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yelp Recommendation System" }]

dependencies = [
    "streamlit>=1.30,<2.0",
    "httpx>=0.25,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools]
py-modules = ["app", "api_client", "components"]
